@@ -39,7 +39,9 @@
                       <tr id="row_node_[% loop.index %]">
                         <td class='dataVal'><a href="[% n.node_url %]" target="_blank">[% n.node_url %]</a></td>
                         <td class='dataVal' style="text-align: center;">
-                          [% IF n.last_contact == 0 %]
+                          [% IF c.cluster.is_it_me(n) %]
+                            <img src="[% url_prefix %]themes/[% theme %]/images/accept.png" width="16" height="16" alt="ok">
+                          [% ELSIF n.last_contact == 0 %]
                             <img src="[% url_prefix %]themes/[% theme %]/images/waiting.gif" width="16" height="16" alt="starting">
                           [% ELSIF date.now - n.last_contact < c.config.cluster_node_stale_timeout && n.pids.keys.size > 0 %]
                             <img src="[% url_prefix %]themes/[% theme %]/images/accept.png" width="16" height="16" alt="ok">
