@@ -690,11 +690,13 @@ cookie_auth_disable_after_failed_logins = 10
 
 # Define generic url pattern to connect all cluster nodes. Each
 # cluster node must be available on the given address.
-# 2 variables will be replaced to make this url generic:
+# 3 variables will be replaced to make this url generic:
 #  - $hostname$:   hostname from `hostname`
 #  - $url_prefix$: contains the url prefix from `url_prefix`
 #  - $proto$:      contains autodetected http/https protocol
 #                  (autodetect only works with OMD)
+# when having a fixed number of cluster nodes, set multiple
+# cluster_nodes with fixed hostnames instead of the generic url.
 #cluster_nodes = http://$hostname$/$url_prefix$/
 
 # Set timeout after which a node is removed from the cluster.
