@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 2.24-2   Tue Nov  6 16:18:50 CET 2018
           - add new (optional) roles
           - fix rest api issues
+          - add cluster mode with fixed number of nodes
           - Panorama:
             - make icon unknown if filter does not return any objects
 
